<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/mainBackground"
  android:orientation="vertical"
  tools:context=".MainActivity">

  <LinearLayout
    android:id="@+id/lin_all"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <TextView
      android:id="@+id/tvWelcome"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-thin"
      android:text="@string/welcome"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="@color/titleFont"
      android:textSize="30sp" />

    <TextView
      android:id="@+id/tvLoginPrompt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginBottom="15dp"
      android:fontFamily="sans-serif-thin"
      android:text="@string/loginPrompt"
      android:textAlignment="center"
      android:textColor="@color/whiteText"
      android:textSize="15sp" />

    <Spinner
      android:id="@+id/sUserTypeMenu"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:background="@color/spinner"
      android:dropDownWidth="wrap_content"
      android:entries="@array/userTypes" />

    <EditText
      android:id="@+id/etNameLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:backgroundTint="@color/textTint"
      android:drawableStart="@drawable/ic_action_name"
      android:ems="10"
      android:fontFamily="sans-serif-thin"
      android:hint="@string/userID"
      android:inputType="number"
      android:singleLine="true"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/textTint"
      android:textColorHint="@color/textTint" />

    <EditText
      android:id="@+id/etPasswordLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:backgroundTint="@color/textTint"
      android:drawableStart="@drawable/ic_action_password"
      android:ems="10"
      android:fontFamily="sans-serif-thin"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:singleLine="true"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/textTint"
      android:textColorHint="@color/textTint" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/ViewButton"
        android:layout_marginTop="30dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btnRegister"
        style="@style/ViewButton"
        android:layout_marginTop="30dp"
        android:text="@string/register" />

  </LinearLayout>

  <ImageView
    android:id="@+id/icon"
    android:layout_width="134dp"
    android:layout_height="89dp"
    android:layout_above="@+id/lin_all"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="65dp"
    android:alpha="0.65"
    app:srcCompat="@drawable/x" />

</RelativeLayout>