<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/mainBackground"
  tools:context=".AdminView_PrintInactiveAccActivity">

  <LinearLayout
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:layout_above="@id/pageBottom"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <TextView
      android:id="@+id/tvPrintingInActive"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-thin"
      android:paddingBottom="1dp"
      android:text="@string/printInactive"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="@color/titleFont"
      android:textSize="38sp" />

    <TextView
      android:id="@+id/tvInactivePrompt"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="sans-serif-thin"
      android:paddingBottom="10dp"
      android:text="@string/activeForUser"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="@color/titleFont"
      android:textSize="15sp" />

    <EditText
      android:id="@+id/etInactiveUserId"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="10dp"
      android:backgroundTint="@color/textTint"
      android:drawableStart="@drawable/ic_action_name"
      android:ems="10"
      android:fontFamily="sans-serif-thin"
      android:hint="@string/userID"
      android:inputType="number"
      android:singleLine="true"
      android:textAppearance="@style/TextAppearance.AppCompat.Medium"
      android:textColor="@color/textTint"
      android:textColorHint="@color/textTint" />

    <TextView
      android:id="@+id/tvPrintsInactive"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fontFamily="sans-serif-thin"
      android:paddingBottom="20dp"
      android:scrollbars="vertical"
      android:text="@string/active"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textColor="@color/titleFont"
      android:textSize="15sp" />
  </LinearLayout>

  <LinearLayout
    android:id="@+id/pageBottom"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="bottom"
    android:orientation="vertical">

    <Button
      android:id="@+id/bPrintInactive"
      style="@style/ViewButton"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      android:text="@string/print" />

  </LinearLayout>

</RelativeLayout>